--- a/SurveyApp/wwwroot/index.html
+++ b/SurveyApp/wwwroot/index.html
@@ -107,12 +107,22 @@
             position: absolute;
             top: 325px;
             left: 526px;
-            padding: 0.12rem;
+            padding: 0.1rem;
             border-radius: 0 50px 50px 0;
             border: 1px solid rgba(255, 255, 255, 0.384);
             width: 50px;
             font-size: 1.5rem;
             cursor: pointer;
+        }
+        .frosted-glass form .submit-btn:hover, .frosted-glass.round2 .submit-btn:hover{
+            background-color: white;
+            color:#000;
+            border: 1px solid #000;
+        }
+
+        .frosted-glass form .submit-btn:active, .frosted-glass.round2 .submit-btn:active{
+            color: #000;
+            background-color: #000;
         }
 
         .hide {
